# czech-devanagari

./: pyproject.toml
czech_dev/: base_map.py  cli.py  fronting.py  parser.py  preprocess.py  render.py  schwa.py  softening.py  transliterate.py
data/: base_map.json  cluster_map.json  fronting_map.json  soft_map.json
